--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "yarn run eslint",
-    "build": "tsc"
+    "build": "tsc -w"
   },
   "repository": {
     "type": "git",
