--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "yarn run eslint",
-    "build": "tsc -w"
+    "lint": "eslint 'lib/**'",
+    "build": "tsc",
+    "start": "tsc -w",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -32,13 +34,9 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^7.32.0",
     "typescript": "^4.1.2"
   },
   "homepage": "https://github.com/zcaceres/snoop#readme"
