--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^7.32.0",
+    "jest": "^29.6.1",
+    "jsdom": "^22.1.0",
     "typescript": "^4.1.2"
   },
   "homepage": "https://github.com/zcaceres/snoop#readme"
