--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
   "dependencies": {
     "lodash.isobject": "^3.0.2"
   },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint 'lib/**'",
     "build": "tsc",
     "start": "tsc -w",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "bun test",
+    "test:watch": "bun test --watch"
   },
   "repository": {
     "type": "git",
@@ -33,12 +49,15 @@
     "url": "https://github.com/zcaceres/snoop/issues"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.14",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^7.32.0",
     "jest": "^29.6.1",
     "jsdom": "^22.1.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.1.2"
   },
   "homepage": "https://github.com/zcaceres/snoop#readme"
