--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "types": ["bun-types"],
-    "module": "esnext",
-    "target": "esnext",
+    "lib": ["dom", "es6"],
+    "module": "CommonJS",
+    "target": "es6",
     "moduleResolution": "node",
     "noEmit": true,
     "moduleDetection": "force",
-    "jsx": "react-jsx",
     "allowJs": true,
     "esModuleInterop": true,
     "strict": true,
